feat: adicionando novos componentes e utilidades

--- a/Aplicação/SCE-Sistema-de-Cadastro-de-Estagiarios/src/components/FomularioLogin/FormularioLogin.css
+++ b/Aplicação/SCE-Sistema-de-Cadastro-de-Estagiarios/src/components/FomularioLogin/FormularioLogin.css
@@ -9,7 +9,8 @@
     border-radius: 5px;
     margin-bottom: 50px  !important;
     margin-top: 25px !important;
-  }
+    margin-bottom: calc(55vh)  !important;
+}
   
   .form-login input{
     margin: 5px 0px 5px 0px;
