--- a/Aplicação/SCE-Sistema-de-Cadastro-de-Estagiarios/src/components/FomularioCadastro/FormularioCadastro.css
+++ b/Aplicação/SCE-Sistema-de-Cadastro-de-Estagiarios/src/components/FomularioCadastro/FormularioCadastro.css
@@ -1,14 +1,15 @@
 .form-cadastro{
     width: 40%;
-    background-color: #ffff;
+    background-color: #ffffff;
     display: flex;
     flex-direction: column;
     padding: 20px;
     margin: 0px auto !important;
     border: 1px solid #ccc;
     border-radius: 5px;
-    margin-bottom: 50px  !important;
-    margin-top: 25px !important;
+    margin-bottom: calc(40vh)  !important;
+    margin-top: 35px !important;
+    
   }
   
   .form-cadastro input{
