--- a/Aplicação/SCE-Sistema-de-Cadastro-de-Estagiarios/src/components/HomeContent/HomeContent.css
+++ b/Aplicação/SCE-Sistema-de-Cadastro-de-Estagiarios/src/components/HomeContent/HomeContent.css
@@ -1,8 +1,7 @@
 .home-title {
-    font-size: 2.5em;
+    font-size: 1.7em;
     font-weight: 600;
     margin-top: 1em;
-    margin-bottom: 1em;
 }
 
 .home-content {
@@ -13,6 +12,7 @@
     margin: 0px;
     padding: 0px;
     background-color: #fff;
+    height: calc(100vh - 130px);
 }
 
 .home-content button {
